<resources>
    <string name="app_name">Paw Palace</string>
    <string name="sign_in_pet_shop_button_title">I Have a Pet Shop</string>
    <string name="sign_in_pet_owner_button_title">I\'m A Pet Owner</string>
    <string name="onboarding_image_content_description">Onboarding Image View</string>
    <string name="sign_in_subtitle">It’s nice to see you, please sign in to continue!</string>
    <string name="email">Email Address</string>
    <string name="email_hint">Type your email address</string>
    <string name="password_hint">Type your password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="sign_in_pet_shop">Sign In as A Pet Shop</string>
    <string name="sign_in_pet_owner_title">Sign In as a Pet’s Owner</string>
    <string name="do_not_have_account_title">Not have an account yet? Sign Up</string>
    <string name="sign_up_subtitle">It’s nice to see you, fill the blank input below here to sign up.</string>
    <string name="name">Name</string>
    <string name="name_hint">Type your full name</string>
    <string name="email_register_hint">Type your email (example: pawpalace@gmail.com)</string>
    <string name="phone">Phone Number</string>
    <string name="phone_hint">Type your phone number (example: 081233445566)</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_pet_shop">Sign Up as A Pet Shop</string>
    <string name="sign_up_pet_owner_title">Sign Up as a Pet’s Owner</string>
    <string name="already_have_account_title">Already have an account? Sign In</string>
    <string name="bottom_navigation_menu_home_title">Home</string>
    <string name="bottom_navigation_menu_chat_title">Chat</string>
    <string name="bottom_navigation_menu_profile_title">Profile</string>
    <string name="bottom_navigation_menu_history_title">History</string>
    <string name="sign_out">Sign Out</string>
    <string name="location">Location</string>
    <string name="search_hint">Enter a keyword</string>
    <string name="search">Search</string>
    <string name="pet_shop_image">Pet shop image</string>
    <string name="star_icon">Star Icon</string>
    <string name="detail">Detail</string>
    <string name="sign_in_pet_shop_title">Sign In as a Pet Shop</string>
    <string name="pet_shop_name">Pet Shop Name</string>
    <string name="sign_up_pet_shop_title">Sign Up as a Pet Shop</string>
    <string name="error_password_empty">Password confirmation cannot be empty</string>
    <string name="error_password_confirmation_invalid">Password confirmation is not the same</string>
    <string name="error_password_length">Password length must be between 8 and 12</string>
    <string name="error_phone_number_empty">Phone number cannot be empty</string>
    <string name="error_phone_number_digits_only">Phone number must contains digit only</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_email_not_valid">Email is not valid</string>
    <string name="per_day">/day</string>
    <string name="description">Description</string>
    <string name="description_example">Petshop Hewan Peliharaan adalah tempat ternama bagi pemilik hewan kesayangan yang menginginkan layanan penitipan terbaik. Petshop kami tidak hanya sekedar tempat penitipan, tetapi rumah kedua bagi sahabat berbulu Anda.
 Dengan pengalaman bertahun-tahun dalam merawat dan memahami hewan, kami di "Sahabat Peliharaan" hadir untuk memberikan perhatian dan kasih sayang yang hewan kesayangan Anda perlukan selama Anda berada jauh dari mereka. Kami tahu bahwa tiap hewan memiliki kepribadian dan kebutuhan yang unik, oleh karena itu, kami menyediakan layanan personalisasi yang bisa disesuaikan dengan preferensi hewan peliharaan Anda.
 Keamanan dan kesehatan sahabat berbulu Anda adalah prioritas kami. Oleh karena itu, petshop kami dilengkapi dengan fasilitas yang terjaga kebersihannya, ruang bermain yang luas dan aman, serta kamar tidur yang nyaman dengan pemanas atau penyejuk udara tergantung pada kebutuhan hewan Anda. Tim kami yang profesional juga selalu siap 24/7 untuk menjamin bahwa tiap hewan yang dititipkan mendapatkan perawatan yang mereka perlukan.
Program penitipan kami meliputi sesi permainan, jalan-jalan rutin, dan sesi pelukan yang akan memastikan hewan kesayangan Anda terhibur, senang, dan tentunya sehat.
Di "Sahabat Peliharaan" Petshop, kami merevolusi cara penitipan hewan dengan menyediakan layanan yang sepenuh hati. Kunjungi kami di Jalan Buah Batu, dan rasakan ketenangan pikiran Anda saat mengetahui sahabat kecil Anda ditangani dengan perawatan terbaik.</string>
    <string name="showing_your_slot">Showing Your Slot</string>
    <string name="booking">Booking</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="complete_your_profile_description">fill the blank input below here to complete your pet shop profile, you can always change it on profile</string>
    <string name="description_hint">Enter your pet shop description</string>
    <string name="location_hint">Enter your location</string>
    <string name="daily_price">Daily Price</string>
    <string name="daily_price_hint">Enter your daily price</string>
    <string name="slot_hint">Enter your pet shop slot</string>
    <string name="save">Save</string>
    <string name="back_button">Back Button</string>
    <string name="message_hint">Type something</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="slot">Slot</string>
    <string name="booking_form_title">Booking Petshop Hewan Peliharaan</string>
    <string name="booking_form_subtitle">fill the blank input below here to process your transaction</string>
    <string name="start_date">Start Date</string>
    <string name="choose_start_date">Choose Start Date</string>
    <string name="end_date">End Date</string>
    <string name="choose_end_date">Choose End Date\n</string>
    <string name="pet_description_hint">Enter your pet description</string>
    <string name="book_now">Book Now</string>
    <string name="cancel">Cancel</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="price_prt_days">Price /days</string>
    <string name="total_days">Total Days</string>
    <string name="total_price">Total Price</string>
    <string name="previous">Previous</string>
    <string name="next_and_ask_detail_payments">Next and Ask Detail Payments</string>
    <string name="booking_history">Booking History</string>
    <string name="location_icon">Location Icon</string>
    <string name="give_rating">Give Rating</string>
    <string name="rating_petshop">Rating Petshop</string>
    <string name="give_rating_description">give the pet shop a star to boost their popularity, don’t hesitate to give low rate if you feel the service is bad</string>
    <string name="submit">Submit</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="content">CONTENT</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="my_profile">My Profile</string>
    <string name="customize_your_profile">Customize your profile</string>
    <string name="next_button">Next Button</string>
    <string name="log_out">Log Out</string>
    <string name="profile_image">Profile Image</string>
    <string name="edit_icon_button">Edit Icon Button</string>
    <string name="save_changes">Save Changes</string>
    <string name="image_paw">Image paw</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="oops_a_seat_is_empty">Oops, a seat is empty</string>
    <string name="close">Close</string>
    <string name="approve">Approve</string>
    <string name="all_location">All Locations</string>
    <string name="city_name">City</string>
    <string name="change_location">Change Location</string>
    <string name="location_not_set">Location not set</string>
</resources>