<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:textColor="@color/textPrimary"
            android:text="@string/booking_form_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:layout_marginHorizontal="32dp"
            android:textColor="@color/textSecondary"
            android:text="@string/booking_form_subtitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/start_date"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_layout_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeColor="@color/colorStroke"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:hint="@string/choose_start_date"
                android:inputType="text"
                android:focusable="false"
                android:maxLines="1"
                android:gravity="top"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/end_date"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_layout_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeColor="@color/colorStroke"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:hint="@string/choose_end_date"
                android:inputType="text"
                android:maxLines="1"
                android:gravity="top"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/description"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeColor="@color/colorStroke"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:hint="@string/pet_description_hint"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="top"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/book_now"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:strokeColor="#EB0A33"
            android:textColor="#EB0A33"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:cornerRadius="4dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>