<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/textPrimary"
            android:fontFamily="@font/inter_semibold"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/booking_summary" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:textSize="12sp"
                android:textColor="@color/textPrimary"
                android:text="@string/price_prt_days" />

            <TextView
                android:id="@+id/text_view_price_per_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textSize="12sp"
                android:textColor="@color/textPrimary"
                tools:text="Rp200.000" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:textSize="12sp"
                android:textColor="@color/textPrimary"
                android:text="@string/total_days" />

            <TextView
                android:id="@+id/text_view_total_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textSize="12sp"
                android:textColor="@color/textPrimary"
                tools:text="5 days" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:layout_marginHorizontal="32dp"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:textColor="@color/textPrimary"
            tools:text="8 December 2023 - 13 December 2023" />

        <View
            android:layout_width="match_parent"
            android:background="@color/colorStroke"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="32dp"
            android:layout_height="1dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:textSize="12sp"
                android:textColor="@color/textPrimary"
                android:text="@string/total_price" />

            <TextView
                android:id="@+id/text_view_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:textSize="12sp"
                android:textColor="@color/green"
                tools:text="Rp400.000" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="32dp"
            android:fontFamily="@font/inter_semibold"
            android:textSize="12sp"
            android:textColor="@color/textPrimary"
            android:text="@string/description" />

        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="32dp"
            tools:text="Kucing saya sangat suka tidur setiap hari dan tidak berbuat apa apa  jadi tolong jangan diganggu. Cukup berikan dia makan ketika dia lapar"
            android:fontFamily="@font/inter" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/next_and_ask_detail_payments"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_previous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/previous"
            android:textAllCaps="false"
            app:strokeColor="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:cornerRadius="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:strokeColor="#EB0A33"
            android:textColor="#EB0A33"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:cornerRadius="4dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>